syntax = "proto3";

package pb;

option go_package="github.com/Kiyosh31/e-commerce-microservice/customer/proto/pb";

import "google/api/annotations.proto";

message User {
  string id = 1;
  string name = 2;
  string lastName = 3;
  string birth = 4;
  string email = 5;
  string password = 6;
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  string insertedID = 1;
}

message SigninUserRequest {
  string email = 1;
  string password = 2;
}

message SigninUserResponse {
  string token = 1;
}

service CustomerService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/api/user"
      body: "*"
    };
  }
  rpc SigninUser(SigninUserRequest) returns (SigninUserResponse) {
    option (google.api.http) = {
      post: "/api/user/signin"
      body: "*"
    };
  }
}