syntax = "proto3";

package inventoryPb;

option go_package="github.com/Kiyosh31/e-commerce-microservice/inventory/proto/inventoryPb";

import "google/api/annotations.proto";

service InventoryService {
  // ------------------ Product ------------------ //
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {
    option (google.api.http) = {
      post: "/api/product"
      body: "*"
    };
  }
  rpc GetProduct(GetProductRequest) returns (GetProductResponse) {
    option (google.api.http) = {
      get: "/api/product/{productId}"
    };
  }
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse) {
    option (google.api.http) = {
      put: "/api/product/{productId}"
      body: "*"
    };
  }
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse) {
    option (google.api.http) = {
      delete: "/api/product/{productId}"
    };
  }

  // ------------------ Product Comment ------------------ //
  rpc CreateProductComment(CreateProductCommentRequest) returns (CreateProductCommentResponse) {
    option (google.api.http) = {
      post: "/api/product/comment"
      body: "*"
    };
  }
  rpc GetProductComment(GetProductCommentRequest) returns (GetProductCommentRespone) {
    option (google.api.http) = {
      get: "/api/product/comment/{commentId}"
    };
  }
  rpc GetAllProductComment(GetAllProductCommentRequest) returns (GetAllProductCommentRespone) {
    option (google.api.http) = {
      get: "/api/product/comment/all/{productId}"
    };
  }
}

// Mongodb responses
message CreatedResult {
  string insertedId = 1;
}

message UpdatedResult {
  int64 matchedCount = 1;
  int64 modifiedCount = 2;
  int64 upsertedCount = 3;
}

message DeletedResult {
  int64 deletedCount = 1;
}

// Product
message Product {
  string id = 1;
  string sellerId = 3;
	string name = 4;
	string description = 5;
	double price = 6;
	string brand = 7;
	double stars = 8;
}

message CreateProductRequest {
  Product product = 1;
}

message CreateProductResponse {
  CreatedResult result = 1;
}

message GetProductRequest {
  string productId = 1;
}

message GetProductResponse {
  Product product = 1;
}

message UpdateProductRequest {
  string productId = 1;
  Product product = 2;
}

message UpdateProductResponse {
  UpdatedResult result = 1;
}

message DeleteProductRequest {
  string productId = 1;
}

message DeleteProductResponse {
  DeletedResult result = 1;
}

// Product comment
message ProductComment {
  string id = 1;
  string productId = 2;
  string userName = 3;
  string comment = 4;
  double ratingStar = 5;
}

message CreateProductCommentRequest {
  ProductComment productComment = 1;
}

message CreateProductCommentResponse {
  CreatedResult result = 1;
}

message GetProductCommentRequest {
  string commentId = 1;
}

message GetProductCommentRespone {
  ProductComment productComment = 1;
}

message GetAllProductCommentRequest {
  string productId = 1;
}

message GetAllProductCommentRespone {
  repeated ProductComment productComment = 1;
}